<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/history_range"
    android:layout_marginTop="@dimen/dimen_10dp"
    android:orientation="vertical"
    android:gravity="center"
    card_view:cardElevation="2dp"
    card_view:cardBackgroundColor="@color/White"
    card_view:cardCornerRadius="2dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true">

    <android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_10dp"
        app:columnCount="2">

        <TextView
            android:id="@+id/tv_help"
            style="@style/TextAppearance.AppCompat.Subhead"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/pick_dates"/>

        <TextView
            android:id="@+id/tv_title_date_from"
            style="@style/HeaderTextView"
            app:layout_gravity="fill_horizontal"
            app:layout_columnWeight="1"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/date_from"/>

        <Button
            android:id="@+id/btn_date_from"
            app:layout_gravity="fill_horizontal"
            app:layout_columnWeight="1"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/date_placeholder"/>

        <TextView
            android:id="@+id/tv_title_date_to"
            app:layout_gravity="fill_horizontal"
            app:layout_columnWeight="1"
            android:gravity="center"
            style="@style/HeaderTextView"
            android:text="@string/to_date"/>

        <Button
            android:id="@+id/btn_date_to"
            app:layout_gravity="fill_horizontal"
            app:layout_columnWeight="1"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/date_placeholder"/>

        <TextView
            android:id="@+id/tv_total"
            style="@style/HeaderTextView"
            app:layout_gravity="fill_horizontal"
            android:gravity="center"
            app:layout_columnWeight="1"
            android:textSize="24sp"
            android:text="total"  />

        <Button
            android:id="@+id/search_history"
            android:text="SEARCH"
            android:textColor="#FDFFF5"
            app:layout_gravity="fill_horizontal"
            app:layout_columnWeight="1"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:shadowColor="#3BA863"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />

    </android.support.v7.widget.GridLayout>
</android.support.v7.widget.CardView>